package CRM.Lib.Docflow.Api.Diadoc.Model;

import "Content_v2.proto";

message CloudSignConfirmResult {
    repeated Content_v2 Signatures = 1;
}