package CRM.Lib.Docflow.Api.Diadoc.Model;

import "CloudSignFile.proto";

message CloudSignRequest {
    repeated CloudSignFile Files = 1;
}