import "RevocationStatus.proto";
import "RoamingNotificationStatus.proto";
import "DocumentType.proto";
import "DocumentId.proto";
import "Content.proto";
import "NonformalizedDocument/NonformalizedDocumentMetadata.proto";
import "InvoiceDocument/InvoiceMetadata.proto";
import "InvoiceDocument/InvoiceRevisionMetadata.proto";
import "InvoiceDocument/InvoiceCorrectionMetadata.proto";
import "InvoiceDocument/InvoiceCorrectionRevisionMetadata.proto";
import "AcceptanceCertificateDocument/AcceptanceCertificateMetadata.proto";
import "BilateralDocument/TrustConnectionRequestMetadata.proto";
import "BilateralDocument/BasicDocumentMetadata.proto";
import "BilateralDocument/BilateralDocumentMetadata.proto";
import "BilateralDocument/ContractMetadata.proto";
import "BilateralDocument/PriceListMetadata.proto";
import "UnilateralDocument/ProformaInvoiceMetadata.proto";
import "UnilateralDocument/ServiceDetailsMetadata.proto";
import "ResolutionStatus.proto";
import "RevocationStatus.proto";
import "ForwardDocumentEvent.proto";

package CRM.Lib.Docflow.Api.Diadoc.Model;

message Document {
    optional string IndexKey = 1;
    required string MessageId = 2;
    required string EntityId = 3;
    required sfixed64 CreationTimestampTicks = 4;
    optional string CounteragentBoxId = 5;
    optional DocumentType DocumentType = 6 [default = UnknownDocumentType];
    repeated DocumentId InitialDocumentIds = 7;
    repeated DocumentId SubordinateDocumentIds = 8;
    optional Content Content = 9;
    optional string FileName = 10;
    optional string DocumentDate = 11;
    optional string DocumentNumber = 12;
    optional CRM.Lib.Docflow.Api.Diadoc.Model.NonformalizedDocument.NonformalizedDocumentMetadata NonformalizedDocumentMetadata = 13;
    optional CRM.Lib.Docflow.Api.Diadoc.Model.InvoiceDocument.InvoiceMetadata InvoiceMetadata = 14;
    optional CRM.Lib.Docflow.Api.Diadoc.Model.BilateralDocument.TrustConnectionRequestMetadata TrustConnectionRequestMetadata = 15;
    optional CRM.Lib.Docflow.Api.Diadoc.Model.BilateralDocument.BasicDocumentMetadata Torg12Metadata = 16;
    optional CRM.Lib.Docflow.Api.Diadoc.Model.InvoiceDocument.InvoiceRevisionMetadata InvoiceRevisionMetadata = 17;
    optional CRM.Lib.Docflow.Api.Diadoc.Model.InvoiceDocument.InvoiceCorrectionMetadata InvoiceCorrectionMetadata = 18;
    optional CRM.Lib.Docflow.Api.Diadoc.Model.InvoiceDocument.InvoiceCorrectionRevisionMetadata InvoiceCorrectionRevisionMetadata = 19;
    optional CRM.Lib.Docflow.Api.Diadoc.Model.AcceptanceCertificateDocument.AcceptanceCertificateMetadata AcceptanceCertificateMetadata = 20;
    optional CRM.Lib.Docflow.Api.Diadoc.Model.UnilateralDocument.ProformaInvoiceMetadata ProformaInvoiceMetadata = 21;
    optional CRM.Lib.Docflow.Api.Diadoc.Model.BilateralDocument.BasicDocumentMetadata XmlTorg12Metadata = 22;
    optional CRM.Lib.Docflow.Api.Diadoc.Model.BilateralDocument.BasicDocumentMetadata XmlAcceptanceCertificateMetadata = 23;
    optional bool IsDeleted = 24 [default = false];
    optional string DepartmentId = 25;
    optional bool IsTest = 26 [default = false];
    optional string FromDepartmentId = 27;
    optional string ToDepartmentId = 28;
    optional CRM.Lib.Docflow.Api.Diadoc.Model.BilateralDocument.PriceListMetadata PriceListMetadata = 29;
    optional string CustomDocumentId = 30;
    optional ResolutionStatus ResolutionStatus = 31;
    optional RevocationStatus RevocationStatus = 32 [default = UnknownRevocationStatus];
    optional sfixed64 SendTimestampTicks = 33;
    optional sfixed64 DeliveryTimestampTicks = 34;
    repeated ForwardDocumentEvent ForwardDocumentEvents = 35;
    optional CRM.Lib.Docflow.Api.Diadoc.Model.BilateralDocument.BilateralDocumentMetadata PriceListAgreementMetadata = 36;
    optional CRM.Lib.Docflow.Api.Diadoc.Model.BilateralDocument.BilateralDocumentMetadata CertificateRegistryMetadata = 37;
    optional CRM.Lib.Docflow.Api.Diadoc.Model.BilateralDocument.BilateralDocumentMetadata ReconciliationActMetadata = 38;
    optional CRM.Lib.Docflow.Api.Diadoc.Model.BilateralDocument.ContractMetadata ContractMetadata = 39;
    optional CRM.Lib.Docflow.Api.Diadoc.Model.BilateralDocument.BasicDocumentMetadata Torg13Metadata = 40;
    optional CRM.Lib.Docflow.Api.Diadoc.Model.UnilateralDocument.ServiceDetailsMetadata ServiceDetailsMetadata = 41;
    optional RoamingNotificationStatus RoamingNotificationStatus = 42 [default = UnknownRoamingNotificationStatus];
    optional bool HasCustomPrintForm = 43 [default = false];
}