package CRM.Lib.Docflow.Api.Diadoc.Model;

import "Docflow/DocumentWithDocflow.proto";

message GetDocflowBatchResponse
{
    repeated CRM.Lib.Docflow.Api.Diadoc.Model.Docflow.DocumentWithDocflow Documents = 1;
}